syntax = "proto3";

package calculator;

option go_package = "github.com/luizmoitinho/grpc-golang-examples/calculator/proto";


message CalculatorRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message CalculatorPrimesRequest{
    int32 number = 1;
}

message CalculatorResponse{
    int32 result = 1;
}

message AvgRequest{
    int32 number = 1;
}

message AvgResponse{
    double result = 1;
}

message MaxRequest{
    int32 number = 1;
}

message MaxResponse{
    int32 result = 1;
}




service CalculatorService {
    rpc Sum(CalculatorRequest) returns (CalculatorResponse);
    rpc Primes(CalculatorPrimesRequest) returns (stream CalculatorResponse);
    rpc Avg (stream AvgRequest) returns (AvgResponse);
    rpc Max (stream MaxRequest) returns(stream MaxResponse);
}

